--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.RECEIVE_PACKAGE_RESTARTED"/>
 
     <application
         android:allowBackup="true"
@@ -120,7 +121,15 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".OdbiornikPowiadomien" />
+        <receiver android:name=".recivers.OdbiornikPowiadomien" />
+
+        <receiver android:name=".recivers.SampleBootReceiver"
+            android:enabled="false"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"></action>
+            </intent-filter>
+        </receiver>
 
     </application>
 
