--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,7 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
 
-    implementation "androidx.compose.material3:material3:1.1.0-alpha02"
+    implementation 'com.google.android.material:material:1.7.0'
     implementation "androidx.compose.material3:material3-window-size-class:1.1.0-alpha02"
 
 
