--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pl.kalisz.ak.rafal.peczek.mojepomiary">
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.RECEIVE_PACKAGE_RESTARTED"/>
@@ -101,7 +101,14 @@
             android:name=".auth.RegisterActivity"
             android:exported="false"
             android:label="Rejestracja"
-            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait"
+            android:parentActivityName=".auth.LoginActivity"
+            android:theme="@style/MyAppTheme" />
+        <activity
+            android:name=".auth.LoginActivity"
+            android:exported="false"
+            android:label="Logowanie"
+            android:screenOrientation="portrait"
             android:theme="@style/MyAppTheme" />
         <activity
             android:name=".lab12.Ustawienia"
