--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,8 +55,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.9'  // json
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.core:core:1.9.0'
-    implementation 'com.google.firebase:firebase-database:20.0.4'
     implementation 'com.google.firebase:firebase-auth:21.1.0'
+    implementation 'com.google.firebase:firebase-database:20.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
@@ -72,7 +72,7 @@ dependencies {
     implementation "androidx.compose.material3:material3:1.1.0-alpha02"
     implementation "androidx.compose.material3:material3-window-size-class:1.1.0-alpha02"
 
-
+    implementation 'com.firebaseui:firebase-ui-database:8.0.2'
 
 
 }
