--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,9 +41,10 @@ android {
 
 dependencies {
 
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'com.google.android.material:material:1.5.0-alpha04'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.github.mrengineer13:snackbar:1.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
     implementation 'androidx.navigation:navigation-ui:2.5.3'
@@ -51,28 +52,23 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.5.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
-    implementation files('libs/mssql-jdbc-10.2.1.jre8.jar')
-    implementation 'com.google.code.gson:gson:2.8.9'  // json
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'androidx.core:core:1.9.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation 'com.google.firebase:firebase-firestore:24.4.1'
     implementation 'com.google.firebase:firebase-auth:21.1.0'
-    implementation 'com.google.firebase:firebase-database:20.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
-    implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.7'
-    implementation 'mysql:mysql-connector-java:8.0.30'
 
-    def room_version = '2.4.3'
-    implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
 
 
     implementation 'com.google.android.material:material:1.7.0'
     implementation "androidx.compose.material3:material3:1.1.0-alpha02"
     implementation "androidx.compose.material3:material3-window-size-class:1.1.0-alpha02"
 
-    implementation 'com.firebaseui:firebase-ui-database:8.0.2'
+    implementation 'com.firebaseui:firebase-ui-firestore:8.0.2'
 
 
 }
