--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,5 +70,9 @@ dependencies {
 
     implementation 'com.firebaseui:firebase-ui-firestore:8.0.2'
 
+    //AnyChart for Android
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+
 
 }
