--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,14 +65,15 @@ dependencies {
 
 
     implementation 'com.google.android.material:material:1.7.0'
-    implementation "androidx.compose.material3:material3:1.1.0-alpha02"
-    implementation "androidx.compose.material3:material3-window-size-class:1.1.0-alpha02"
+    implementation "androidx.compose.material3:material3:1.0.1"
+    implementation "androidx.compose.material3:material3-window-size-class:1.0.1"
 
     implementation 'com.firebaseui:firebase-ui-firestore:8.0.2'
 
     //AnyChart for Android
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
-
+    //Android Password Strength Meter
+    implementation 'com.zeoflow:password-strength:1.3.0'
 
 }
